- Gradient Descent with Momentum Algorithm (Updated)

--- a/notebooks/GradientDescentWithMomentum.ipynb
+++ b/notebooks/GradientDescentWithMomentum.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Descent with Momentum\n",
+    "\n",
+    "\\begin{align}\n",
+    "p(\\tau) & =  \\nabla E(w(\\tau-1)) + \\beta p(\\tau-1) \\\\\n",
+    "w(\\tau) & =  w(\\tau-1) - \\alpha p(\\tau) \n",
+    "\\end{align}\n",
+    "\n",
+    "When $\\beta=0$, we recover gradient descent.\n",
+    "\n",
+    "| Symbol           | Meaning                                                        |\n",
+    "|:-----------------|:---------------------------------------------------------------|\n",
+    "| $$\\tau$$         | Iteration number                                               |\n",
+    "| $$w$$            | Coefficients vector                                            |\n",
+    "| $$w(\\tau)$$      | Coefficients vector at **$\\tau$** iteration                    |\n",
+    "| $$\\alpha$$       | Learning rate                                                  |\n",
+    "| $$\\beta$$        | Momentum                                                       |\n",
+    "| $$\\nabla$$       | Gradient function                                              |\n",
+    "| $$E(w(\\tau-1))$$ | Error function with **w** coefficients at **$\\tau$** iteration |\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -69,15 +93,6 @@
     "    # Perfom one descent step\n",
     "    w = w - alpha * p\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -96,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
